Updated guest to have a default sound and default color
