# rfidsecuritysvc/model/guest.py
@@ -3,10 +3,12 @@ from rfidsecuritysvc.model import BaseModel
 
 
 class Guest(BaseModel):
-    def __init__(self, id, first_name, last_name):
+    def __init__(self, id, first_name, last_name, default_sound=None, default_color=None):
         self.id = id
         self.first_name = first_name
         self.last_name = last_name
+        self.default_sound = default_sound
+        self.default_color = default_color
 
 
 def get(id):
@@ -21,19 +23,25 @@ def list():
     return result
 
 
-def create(first_name, last_name):
-    return table.create(first_name, last_name)
+def create(first_name, last_name, default_sound=None, default_color=None):
+    return table.create(first_name, last_name, default_sound, default_color)
 
 
 def delete(id):
     return table.delete(id)
 
 
-def update(id, first_name, last_name):
-    return table.update(id, first_name, last_name)
+def update(id, first_name, last_name, default_sound=None, default_color=None):
+    return table.update(id, first_name, last_name, default_sound, default_color)
 
 
 def __model(row):
     if not row:
         return
-    return Guest(row['id'], row['first_name'], row['last_name'])
+    return Guest(
+        row['id'],
+        row['first_name'],
+        row['last_name'],
+        row['default_sound'],
+        row['default_color']
+        )
